Fixed the research interest formatting on mobile

--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -761,7 +761,15 @@
 				-webkit-text-stroke-width: 0.1px;
 			}
 
-
+			.Info_Table {
+				background-color: white;
+				box-shadow: 5px 5px 5px #888888;
+				padding: 1em;
+				border: 1px solid #D1D1D1;
+				width: 80%;
+				margin: auto;
+			}
+			
 		/* Basic */
 
 			body, input, textarea, select {
@@ -817,6 +825,14 @@
 				-webkit-text-stroke-color: #3f1e8a;
 				-webkit-text-stroke-width: 0.1px;
 			}
+			.Info_Table {
+				background-color: white;
+				box-shadow: 5px 5px 5px #888888;
+				padding: 1em;
+				border: 1px solid #D1D1D1;
+				width: 80%;
+				margin: auto;
+			}
 			
 		/* Main */
 
@@ -871,7 +887,13 @@
 				-webkit-text-stroke-color: #3f1e8a;
 				-webkit-text-stroke-width: 0.1px;
 			}
-			
+			.Info_Table {
+				background-color: white;
+				box-shadow: 5px 5px 5px #888888;
+				padding: 1em;
+				border: 1px solid #D1D1D1;
+				width: 100%;
+			}				
 
 		/* Basic */
 
@@ -984,7 +1006,14 @@
 				-webkit-text-stroke-color: #3f1e8a;
 				-webkit-text-stroke-width: 0.1px;
 			}
-			
+
+			.Info_Table {
+				background-color: white;
+				box-shadow: 5px 5px 5px #888888;
+				padding: 1em;
+				border: 1px solid #D1D1D1;
+				width: 100%;
+			}			
 			
 		/* Basic */
 
